--- a/source/data/masters/2.yml
+++ b/source/data/masters/2.yml
@@ -34,7 +34,7 @@
   name: 佐々木 佳祐
   image: https://si0.twimg.com/profile_images/3082568461/b1467e012995dfc062ddae096e02de12.png
   facebook: rooandqoo
-  twitter: rooandqoo
+  twitter: RooandQoo
   github: rooandqoo
   web:
   description: 釧路高専 20期情報工学科卒業。電気通信大学の院に通いつつピクシブ株式会社にてアルバイトに勤しむ。普段はAndroidのアプリケーション開発をしていて、Ruby/Railsは目下勉強中。高専カンファレンスを始めとした楽しい催し物とクラブミュージックが好き。
