Update mrkn's description

--- a/source/data/masters/2.yml
+++ b/source/data/masters/2.yml
@@ -13,7 +13,12 @@
   twitter: mrkn
   github: mrkn
   web:
-  description: 苫小牧高専情報工学科および旭川高専専攻科生産システム工学専攻を卒業後、北海道大学大学院情報科学研究科にて複雑ネットワークと同期現象の研究に従事し、2009年に学位を取得。その後札幌市内の医療系ベンチャー企業に就職し、システムエンジニアとして日々を過ごす。2010年2月、CRuby のコミッタに就任。2011年12月、クックパッド株式会社へ転職。現在、クックパッドの開発基盤エンジニアとして、毎日の料理を楽しくし心からの笑顔を世界中に広げるために働いている。
+  description: |-
+    クックパッド株式会社の開発基盤エンジニア。苫小牧高専と旭川高専専攻科を卒業。
+    2009年に北大で博士号を取得し札幌で就職。CRuby のコミッタとして bigdecimal のメンテナンスを担当。
+    2年後に転職し現職へ。クックパッドでは開発基盤エンジニアとして社内のサービス開発エンジニアを幸せにすることで、
+    世界中の料理を楽しくすることに間接的に貢献している。
+
 -
   name: 大和田 純
   image: https://si0.twimg.com/profile_images/2942332207/dd1501287df208056e6edb8b1514b84a.jpeg
