Update mitaku's description

--- a/data/masters/2.yml
+++ b/data/masters/2.yml
@@ -50,7 +50,7 @@
   twitter: mitaku
   github: mitaku
   web:
-  description: 株式会社オプティムのRailsエバンジェリスト。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く。
+  description: ソーシャル系Railsエンジニア。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く。
 -
   name: 藤原 裕也
   image: https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png
