update _a__san's description

--- a/data/masters/2.yml
+++ b/data/masters/2.yml
@@ -72,9 +72,9 @@
   image: https://twimg0-a.akamaihd.net/profile_images/3064291628/70f869b4ea94a85744370d1f378ea1e8_bigger.png
   facebook: aoyama.kohei
   twitter: _a__san
-  github: akoruka
+  github: a3geek
   web:
-  description: 福井工業高等専門学校 電子情報工学科を飛び出してそのまま上京してきたプログラマーっぽい人 自称ゆるふわガチ勢 こわい人こわいです
+  description: 福井高専電子情報工学科を4年時に中退、新卒としてチームラボ株式会社に入社。普段はインタラクティブチームにてサイネージなどの開発に取り組んでおり、Ruby/Railsは趣味で勉強、開発に使用している。ゆるふわガチ勢を信条に、日々強さを求めて戦っている。
 -
   name: 成田 一生
   image: https://twimg0-a.akamaihd.net/profile_images/1296753997/image.jpg
