--- a/data/masters/3.yml
+++ b/data/masters/3.yml
@@ -98,3 +98,10 @@
   github: machu
   web: http://www.machu.jp/diary/
   description: tDiaryコミッタ。Rubyの簡潔さと奥深さに魅せられて早10年。ブログ「まちゅダイアリー」や雑誌「日経ソフトウエア」、「WEB+DBPRESS」にセキュリティや技術ネタを掲載。2児の父になり、昼は家族とプラレールのコース作成、深夜は1人でひっそりプログラミング。いつか子どもとペアプロするのが夢。久留米高専、制御情報工学科卒。
+-
+  name: 関口 亮一
+  image: https://pbs.twimg.com/profile_images/378800000350875781/b634ec5e01e84ce2b435348a286ba3b1.jpeg
+  twitter: ryopeko
+  github: ryopeko
+  web: http://ryopeko.hatenablog.com/
+  description: パーフェクトRuby共著者のうちの一人。株式会社ディー・エヌ・エー所属。大規模新卒エンジニア研修を担当したこともあって人に教えるのは得意だとか得意じゃないとか。得意な言語はPerl。Perlを知ると世界の真理が見えてくる。
