Change igaiga's company name.

--- a/data/masters/3.yml
+++ b/data/masters/3.yml
@@ -4,8 +4,8 @@
   facebook: kuniaki.igarashi
   twitter: igaiga555
   github: igaiga
-  web:
-  description: 株式会社万葉のrailsエンジニア。群馬高専卒業。一橋大学非常勤講師(ruby, rails)。著書に「スタートアップruby」。tokyu.rb, asakusa.rb所属。高専カンファレンス014東京実行委員長。em高専カンファレンスvol.1編集長。
+  web: http://igarashikuniaki.net/diary/
+  description: 株式会社 spice life のrailsエンジニア。群馬高専卒業。一橋大学非常勤講師(ruby, rails)。著書に「スタートアップruby」。Tokyu.rb, Asakusa.rb, Kuniaki.rb所属。高専カンファレンス014東京実行委員長。em高専カンファレンスvol.1編集長。
 -
   name: 村田 賢太
   image: https://si0.twimg.com/profile_images/2492166253/pufry2sqh7y0zw1c3u1b.jpeg
