--- a/data/masters/3.yml
+++ b/data/masters/3.yml
@@ -105,3 +105,11 @@
   github: ryopeko
   web: http://ryopeko.hatenablog.com/
   description: パーフェクトRuby共著者のうちの一人。株式会社ディー・エヌ・エー所属。大規模新卒エンジニア研修を担当したこともあって人に教えるのは得意だとか得意じゃないとか。得意な言語はPerl。Perlを知ると世界の真理が見えてくる。
+-
+  name: 堀 邦明
+  image: https://pbs.twimg.com/profile_images/1528981693/holygrail.jpg
+  facebook: kuniaki.hori
+  twitter: HolyGrail
+  github: HolyGrail
+  web: http://diary.holygrail.dj/
+  description: 徳山工業高等専門学校 情報電子工学科卒業。株式会社spice lifeに所属。Rails2年生。Kuniaki.rb主催。WEB+DB PRESSのインタビューでつつみともよにネコミミをつけさせて各所から賞賛の言葉を浴びる。
