--- a/data/masters/3.yml
+++ b/data/masters/3.yml
@@ -113,3 +113,10 @@
   github: HolyGrail
   web: http://diary.holygrail.dj/
   description: 徳山工業高等専門学校 情報電子工学科卒業。株式会社spice lifeに所属。Rails2年生。Kuniaki.rb主催。WEB+DB PRESSのインタビューでつつみともよにネコミミをつけさせて各所から賞賛の言葉を浴びる。
+-
+  name: 織田 敬子
+  image: https://pbs.twimg.com/profile_images/3305241415/339184fc84694037afcbd3e9764a588c.jpeg
+  facebook: keiko713
+  twitter: keiko713
+  github: keiko713
+  description: 石川工業高等専門学校 電子情報工学科卒。大学に進学し学部卒でSIerに入社。ふと思い立って退職してサンフランシスコで2年ほど過ごし、現在HerokuにてSuppport EngineerとしてRailsに限らずいろんな質問に答えたり答えなかったり。
