--- a/data/masters/3.yml
+++ b/data/masters/3.yml
@@ -120,3 +120,10 @@
   twitter: keiko713
   github: keiko713
   description: 石川工業高等専門学校 電子情報工学科卒。大学に進学し学部卒でSIerに入社。ふと思い立って退職してサンフランシスコで2年ほど過ごし、現在HerokuにてSuppport EngineerとしてRailsに限らずいろんな質問に答えたり答えなかったり。
+-
+  name: 喜多 啓介
+  image: https://pbs.twimg.com/profile_images/3340818214/fe393816d22e03b76e576f41829b6195_bigger.png
+  facebook: kei.kita2501
+  twitter: kitak
+  github: kitak
+  description: 石川工業高等専門学校 専攻科 電子機械工学専攻卒。今年の4月から株式会社paperboy&co.の新卒氏。ペパボ1、2を争う眼光の鋭さだが、実際はかなりのほほんとした性格。社内のIRCでantipopさんと<a href="http://iiirc.org/snippets/274">愉快なやりとり</a>を日々繰り広げている。
