edit ryopeko's profile

--- a/data/masters/3.yml
+++ b/data/masters/3.yml
@@ -106,7 +106,7 @@
   twitter: ryopeko
   github: ryopeko
   web: http://ryopeko.hatenablog.com/
-  description: パーフェクトRuby共著者のうちの一人。株式会社ディー・エヌ・エー所属。大規模新卒エンジニア研修を担当したこともあって人に教えるのは得意だとか得意じゃないとか。得意な言語はPerl。Perlを知ると世界の真理が見えてくる。
+  description: 都立航空高専（現都立産業技術高専） 電子工学科卒。パーフェクトRuby共著者のうちの一人。株式会社ディー・エヌ・エー所属。大規模新卒エンジニア研修を担当したこともあって人に教えるのは得意だとか得意じゃないとか。得意な言語はPerl。Perlを知ると世界の真理が見えてくる。
 -
   name: 堀 邦明
   image: https://pbs.twimg.com/profile_images/1528981693/holygrail.jpg
