--- a/data/masters/3.yml
+++ b/data/masters/3.yml
@@ -1,6 +1,6 @@
 -
   name: 五十嵐 邦明
-  image: https://si0.twimg.com/profile_images/2775085674/aacc6da0f43115bb2e60878e10a92377.jpeg
+  image: http://pbs.twimg.com/profile_images/378800000065478361/f0584a649326ef2e5f81bd0b96903525.png
   facebook: kuniaki.igarashi
   twitter: igaiga555
   github: igaiga
@@ -8,7 +8,7 @@
   description: 株式会社 spice life のrailsエンジニア。群馬高専卒業。一橋大学非常勤講師(ruby, rails)。著書に「スタートアップruby」。Tokyu.rb, Asakusa.rb, Kuniaki.rb所属。高専カンファレンス014東京実行委員長。em高専カンファレンスvol.1編集長。
 -
   name: 村田 賢太
-  image: https://si0.twimg.com/profile_images/2492166253/pufry2sqh7y0zw1c3u1b.jpeg
+  image: http://pbs.twimg.com/profile_images/3409680465/b25a28396d884723e1f3c6e9821789f1.jpeg
   facebook: mrkn720
   twitter: mrkn
   github: mrkn
@@ -20,7 +20,7 @@
     世界中の料理を楽しくすることに間接的に貢献している。
 -
   name: 佐々木 佳祐
-  image: https://si0.twimg.com/profile_images/3082568461/b1467e012995dfc062ddae096e02de12.png
+  image:  http://pbs.twimg.com/profile_images/421144410147917824/IuySxIWS.png
   facebook: rooandqoo
   twitter: RooandQoo
   github: rooandqoo
@@ -28,7 +28,7 @@
   description: 釧路高専 20期情報工学科卒業。電気通信大学の院に通いつつピクシブ株式会社にてアルバイトに勤しむ。普段はAndroidのアプリケーション開発をしていて、Ruby/Railsは目下勉強中。高専カンファレンスを始めとした楽しい催し物とクラブミュージックが好き。
 -
   name: 三浦 彩
-  image: https://si0.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg
+  image: http://pbs.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg
   facebook: takumi.miura.9
   twitter: mitaku
   github: mitaku
@@ -36,7 +36,7 @@
   description: 秋田高専卒業。ソーシャル系Railsエンジニア。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く。
 -
   name: 藤原 裕也
-  image: https://si0.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png
+  image: http://pbs.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png
   facebook: asonas.P
   twitter: asonas
   github: asonas
@@ -44,7 +44,7 @@
   description: 津山工業高等専門学校 電気電子工学科を修了後、武蔵野美術大学の通信学部に通いデザインを学ぶ。2010年に京都で行われた高専カンファレンスに感化され、今はスタートアップ系Web男子として日々を邁進。高専カンファレンスやTech系勉強会などによく出現する。
 -
   name: そらは
-  image: https://twimg0-a.akamaihd.net/profile_images/3022880518/d4a92c61fdb0ee77fb6d29ed644581b7_bigger.png
+  image: http://pbs.twimg.com/profile_images/378800000551066529/d4a92c61fdb0ee77fb6d29ed644581b7.png
   facebook:
   twitter: sora_h
   github: sorah
@@ -54,7 +54,7 @@
     おそらく講師陣の中で唯一高専との接点が薄いと思われます。
 -
   name: 青山 昂平
-  image: https://twimg0-a.akamaihd.net/profile_images/3064291628/70f869b4ea94a85744370d1f378ea1e8_bigger.png
+  image: http://pbs.twimg.com/profile_images/3786038276/78d3f4b1f18b6a645582cf675df9eb6f.png
   facebook: aoyama.kohei
   twitter: _a__san
   github: a3geek
@@ -62,7 +62,7 @@
   description: 福井高専電子情報工学科を4年時に中退、新卒としてチームラボ株式会社に入社。普段はインタラクティブチームにてサイネージなどの開発に取り組んでおり、Ruby/Railsは趣味で勉強、開発に使用している。ゆるふわガチ勢を信条に、日々強さを求めて戦っている。
 -
   name: 成田 一生
-  image: https://twimg0-a.akamaihd.net/profile_images/1296753997/image.jpg
+  image: http://pbs.twimg.com/profile_images/1296753997/image.jpg
   facebook: mirakui
   twitter: mirakui
   github: mirakui
@@ -70,7 +70,7 @@
   description: クックパッドで働くインフラエンジニア。主に Rails アプリケーションのパフォーマンス改善を担当。技術評論社 WEB+DB PRESS Vol.70に「Rails高速化特集」を書きました。出身高専は豊田高専情報工学科。好きな動物はパンダ。
 -
   name: 松岡 浩平
-  image: https://si0.twimg.com/profile_images/16229292/face.jpg
+  image:  http://pbs.twimg.com/profile_images/16229292/face.jpg
   twitter: machu
   github: machu
   web: http://www.machu.jp/diary/
@@ -99,7 +99,7 @@
   description: 石川工業高等専門学校 電子情報工学科卒。大学に進学し学部卒でSIerに入社。ふと思い立って退職してサンフランシスコで2年ほど過ごし、現在HerokuにてSuppport EngineerとしてRailsに限らずいろんな質問に答えたり答えなかったり。
 -
   name: 喜多 啓介
-  image: https://pbs.twimg.com/profile_images/3340818214/fe393816d22e03b76e576f41829b6195_bigger.png
+  image: http://pbs.twimg.com/profile_images/436698798849421312/RthClfQJ.png
   facebook: kei.kita2501
   twitter: kitak
   github: kitak
