--- a/data/masters/4.yml
+++ b/data/masters/4.yml
@@ -54,9 +54,9 @@
     おそらく講師陣の中で唯一高専との接点が薄いと思われます。
 -
   name: 青山 昂平
-  image: http://pbs.twimg.com/profile_images/3786038276/78d3f4b1f18b6a645582cf675df9eb6f.png
+  image: https://pbs.twimg.com/profile_images/415006704502181888/nLrtPzZI.png
   facebook: aoyama.kohei
-  twitter: _a__san
+  twitter: a3geek
   github: a3geek
   web:
   description: 福井高専電子情報工学科を4年時に中退、新卒としてチームラボ株式会社に入社。普段はインタラクティブチームにてサイネージなどの開発に取り組んでおり、Ruby/Railsは趣味で勉強、開発に使用している。ゆるふわガチ勢を信条に、日々強さを求めて戦っている。
