--- a/data/masters/4.yml
+++ b/data/masters/4.yml
@@ -104,3 +104,10 @@
   twitter: kitak
   github: kitak
   description: 石川工業高等専門学校 専攻科 電子機械工学専攻卒。今年の4月から株式会社paperboy&co.の新卒氏。ペパボ1、2を争う眼光の鋭さだが、実際はかなりのほほんとした性格。社内のIRCでantipopさんと<a href="http://iiirc.org/snippets/274">愉快なやりとり</a>を日々繰り広げている。
+-
+  name: 田中 洸一
+  image: https://pbs.twimg.com/profile_images/3013140319/26b15adb2d6059e6e2ccc4670e2fb40e.jpeg
+  facebook: koichi.tanaka.56
+  twitter: tanaka51
+  github: tanaka51-jp
+  description: 株式会社万葉 所属。Rails エンジニア。休日はプログラミングしいてるかアニメを見ているか麻雀をしているかお酒を飲んでいます。木更津高専 情報工学科 中退。
