--- a/data/masters/4.yml
+++ b/data/masters/4.yml
@@ -111,3 +111,9 @@
   twitter: tanaka51
   github: tanaka51-jp
   description: 株式会社万葉 所属。Rails エンジニア。休日はプログラミングしいてるかアニメを見ているか麻雀をしているかお酒を飲んでいます。木更津高専 情報工学科 中退。
+-
+  name: 立花 豊
+  image: https://pbs.twimg.com/profile_images/2206703597/myprofile_bigger.jpg
+  twitter: saboyutaka
+  github: saboyutaka
+  description: KCS北九州情報専門学校、北海道情報大学をダブルスクールで卒業。新卒で入ったSIerで約1年半Javaをたしなむ。その後、ITカルチャーを見るために3ヶ月間渡米。帰国後スタッフで参加したRubyKaigi2013でpixivの中の人と知り合い入社。BOOTH.pmの開発で日々Railsと戯れる。最近はGrowth Hackに興味あり。
