--- a/data/masters/5.yml
+++ b/data/masters/5.yml
@@ -117,3 +117,11 @@
   twitter: saboyutaka
   github: saboyutaka
   description: KCS北九州情報専門学校、北海道情報大学をダブルスクールで卒業。新卒で入ったSIerで約1年半Javaをたしなむ。その後、ITカルチャーを見るために3ヶ月間渡米。帰国後スタッフで参加したRubyKaigi2013でpixivの中の人と知り合い入社。BOOTH.pmの開発で日々Railsと戯れる。最近はGrowth Hackに興味あり。
+-
+  name: 桐山 裕平
+  image: https://pbs.twimg.com/profile_images/503881558114050049/rnjMz_Qp.jpeg
+  twitter: kirikiriyamama
+  facebook: kirikiri.yamama
+  github: kirikiriyamama
+  web: http://ponde.hatenadiary.com/
+  description: 長野工業高等専門学校 電子情報工学科卒。2013年 Rails寺子屋に参加、Railsと出会う。2014年 Rails寺子屋を通じて出会った株式会社spice lifeに転職、Railsエンジニアになる。同年 Rails寺子屋の師範になる。
