--- a/data/masters/6.yml
+++ b/data/masters/6.yml
@@ -97,3 +97,11 @@
   github: kirikiriyamama
   web: http://kirikiriyamama.hatenablog.com/
   description: 長野工業高等専門学校 電子情報工学科卒。2013年 Rails寺子屋に参加、Railsと出会う。2014年 Rails寺子屋を通じて出会った株式会社spice lifeに転職、Railsエンジニアになる。同年 Rails寺子屋の師範になる。
+-
+  name: 藤原 裕也
+  image: http://pbs.twimg.com/profile_images/1489032359/__________2011-08-11_9.48.06.png
+  facebook: asonas.P
+  twitter: asonas
+  github: asonas
+  web:
+  description: 津山工業高等専門学校 電気電子工学科を修了後、武蔵野美術大学の通信学部に通いデザインを学ぶ。2010年に京都で行われた高専カンファレンスに感化され、今はスタートアップ系Web男子として日々を邁進。高専カンファレンスやTech系勉強会などによく出現する。
