Add profile sue738

--- a/data/masters/6.yml
+++ b/data/masters/6.yml
@@ -105,3 +105,11 @@
   github: asonas
   web:
   description: 津山工業高等専門学校 電気電子工学科を修了後、武蔵野美術大学の通信学部に通いデザインを学ぶ。2010年に京都で行われた高専カンファレンスに感化され、今はスタートアップ系Web男子として日々を邁進。高専カンファレンスやTech系勉強会などによく出現する。
+-
+  name: 末永 昌也
+  image: https://pbs.twimg.com/profile_images/494174637031321600/P58XiMrF.png
+  facebook: masaya.suenaga
+  twitter: sue738
+  github: sue738
+  description: 久留米工業高等専門学校 制御情報工学科卒。在学時代はずっとロボコンやってました。StartupWeekendという起業イベントで優勝したプロダクトで株式会社LOUPEを設立。主にRailsを書いてます。
+
