Update kirikiriyamama's profile image url

--- a/data/masters/6.yml
+++ b/data/masters/6.yml
@@ -91,7 +91,7 @@
   description: 株式会社万葉 所属。Rails エンジニア。休日はプログラミングしいてるかアニメを見ているか麻雀をしているかお酒を飲んでいます。木更津高専 情報工学科 中退。
 -
   name: 桐山 裕平
-  image: https://pbs.twimg.com/profile_images/503881558114050049/rnjMz_Qp.jpeg
+  image: https://pbs.twimg.com/profile_images/573043864241512449/QpXlia5Z.png
   twitter: kirikiriyamama
   facebook: kirikiri.yamama
   github: kirikiriyamama
