--- a/data/masters/6.yml
+++ b/data/masters/6.yml
@@ -112,4 +112,15 @@
   twitter: sue738
   github: sue738
   description: 久留米工業高等専門学校 制御情報工学科卒。在学時代はずっとロボコンやってました。StartupWeekendという起業イベントで優勝したプロダクトで株式会社LOUPEを設立。主にRailsを書いてます。
-
+-
+  name: 奥本 隼
+  image: https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xaf1/v/t1.0-1/c164.4.631.631/s160x160/10556522_754441627959630_8667552795806941541_n.jpg?oh=723c37f4e34ded789597adc2bd41ad03&oe=5583DBC3&__gda__=1434589487_1e5bb3eedb7fffbea37ba70e8d4ffa4c
+  facebook: falcon.8823
+  twitter: falcon_8823
+  github: falcon8823
+  web: http://blog.falconsrv.net/
+  description: |-
+    長野工業高等専門学校 電子情報工学科をこの春卒業し、
+    豊橋技術科学大学に編入。
+    2011年の高専カンファレンスin長野2で、受付システム「カンファイン」を開発する際にRailsと出会う。
+    昨年は、全国の高専生と遠隔で編入過去問解答共有サービス「Rocket Answer」を開発した。
