--- a/data/masters/6.yml
+++ b/data/masters/6.yml
@@ -124,3 +124,11 @@
     豊橋技術科学大学に編入。
     2011年の高専カンファレンスin長野2で、受付システム「カンファイン」を開発する際にRailsと出会う。
     昨年は、全国の高専生と遠隔で編入過去問解答共有サービス「Rocket Answer」を開発した。
+-
+  name: 泉 将之
+  image: https://pbs.twimg.com/profile_images/414065206210220032/bJezBEvM.jpeg
+  facebook: izumin5210
+  twitter: izumin5210
+  github: izumin5210
+  web: http://izumin.hateblo.jp/
+  description: 明石高専 電気情報工学科及び同専攻科卒、Dmet labelとWantedlyで働くRuby大好きWeb系なんでもエンジニア。主にRailsを扱うがフロントエンドも得意、Androidも書く。うさみみ高専生。4月からうさみみ東大院生に進化する予定。
