Update falcon8823's profile image

--- a/data/masters/7.yml
+++ b/data/masters/7.yml
@@ -114,7 +114,7 @@
   description: 久留米工業高等専門学校 制御情報工学科卒。在学時代はずっとロボコンやってました。StartupWeekendという起業イベントで優勝したプロダクトで株式会社LOUPEを設立。主にRailsを書いてます。
 -
   name: 奥本 隼
-  image: https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xaf1/v/t1.0-1/c164.4.631.631/s160x160/10556522_754441627959630_8667552795806941541_n.jpg?oh=723c37f4e34ded789597adc2bd41ad03&oe=5583DBC3&__gda__=1434589487_1e5bb3eedb7fffbea37ba70e8d4ffa4c
+  image: https://secure.gravatar.com/avatar/af5dcc1970148a511bf8a393f42dda96
   facebook: falcon.8823
   twitter: falcon_8823
   github: falcon8823
