--- a/data/masters/7.yml
+++ b/data/masters/7.yml
@@ -25,7 +25,7 @@
   twitter: RooandQoo
   github: rooandqoo
   web:
-  description: 釧路高専 20期情報工学科卒業。電気通信大学の院に通いつつピクシブ株式会社にてアルバイトに勤しむ。普段はAndroidのアプリケーション開発をしていて、Ruby/Railsは目下勉強中。高専カンファレンスを始めとした楽しい催し物とクラブミュージックが好き。
+  description: 釧路高専 20期情報工学科卒業、ピクシブ株式会社のエンジニア。普段はAndroidのアプリケーション開発をしている。高専カンファレンスを始めとした楽しい催し物とクラブミュージックが好き。
 -
   name: 三浦 彩
   image: http://pbs.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg
