Update my profile

--- a/data/masters/7.yml
+++ b/data/masters/7.yml
@@ -42,7 +42,7 @@
   github: sorah
   web: http://sorah.jp/
   description: |-
-    Rubyist, Ruby コミッタ。クックパッド技術部で開発基盤エンジニアをしています。
+    Rubyist, Ruby コミッタ。クックパッド インフラ部で開発基盤エンジニアをしています。
     おそらく講師陣の中で唯一高専との接点が薄いと思われます。
 -
   name: 青山 昂平
