Add profile @beta_chelsea

--- a/data/masters/7.yml
+++ b/data/masters/7.yml
@@ -132,3 +132,10 @@
   github: izumin5210
   web: http://izumin.hateblo.jp/
   description: 明石高専 電気情報工学科及び同専攻科卒、Dmet labelとWantedlyで働くRuby大好きWeb系なんでもエンジニア。主にRailsを扱うがフロントエンドも得意、Androidも書く。うさみみ高専生。4月からうさみみ東大院生に進化する予定。
+-
+  name: 柏 夏美
+  image: https://pbs.twimg.com/profile_images/532187945113886721/PHh_gKCp.png
+  facebook: natsumi.kashiwa
+  twitter: beta_chelsea
+  github: betachelsea
+  description: 石川工業高等専門学校 電子情報工学科卒。高専カンファレンス情報系界隈の諸クラスタの影響を受け、Railsを始める。Rails寺子屋にて色々学んだ結果お仕事でも触るようになりました。株式会社LOUPE所属。 一番苦手なことは環境構築。
