--- a/data/masters/7.yml
+++ b/data/masters/7.yml
@@ -27,14 +27,6 @@
   web:
   description: 釧路高専 20期情報工学科卒業、ピクシブ株式会社のエンジニア。普段はAndroidのアプリケーション開発をしている。高専カンファレンスを始めとした楽しい催し物とクラブミュージックが好き。
 -
-  name: 三浦 彩
-  image: http://pbs.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg
-  facebook: takumi.miura.9
-  twitter: mitaku
-  github: mitaku
-  web:
-  description: 秋田高専卒業。ソーシャル系Railsエンジニア。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く。
--
   name: そらは
   image: http://pbs.twimg.com/profile_images/378800000551066529/d4a92c61fdb0ee77fb6d29ed644581b7.png
   facebook:
@@ -61,13 +53,6 @@
   web:
   description: クックパッドで働くインフラエンジニア。主に Rails アプリケーションのパフォーマンス改善を担当。技術評論社 WEB+DB PRESS Vol.70に「Rails高速化特集」を書きました。出身高専は豊田高専情報工学科。好きな動物はパンダ。
 -
-  name: 松岡 浩平
-  image:  http://pbs.twimg.com/profile_images/16229292/face.jpg
-  twitter: machu
-  github: machu
-  web: http://www.machu.jp/diary/
-  description: tDiaryコミッタ。Rubyの簡潔さと奥深さに魅せられて早10年。ブログ「まちゅダイアリー」や雑誌「日経ソフトウエア」、「WEB+DBPRESS」にセキュリティや技術ネタを掲載。2児の父になり、昼は家族とプラレールのコース作成、深夜は1人でひっそりプログラミング。いつか子どもとペアプロするのが夢。久留米高専、制御情報工学科卒。
--
   name: 堀 邦明
   image: https://pbs.twimg.com/profile_images/1528981693/holygrail.jpg
   facebook: kuniaki.hori
@@ -82,13 +67,6 @@
   twitter: kitak
   github: kitak
   description: 石川工業高等専門学校 専攻科 電子機械工学専攻卒。今年の4月から株式会社paperboy&co.の新卒氏。ペパボ1、2を争う眼光の鋭さだが、実際はかなりのほほんとした性格。社内のIRCでantipopさんと<a href="http://iiirc.org/snippets/274">愉快なやりとり</a>を日々繰り広げている。
--
-  name: 田中 洸一
-  image: https://pbs.twimg.com/profile_images/3013140319/26b15adb2d6059e6e2ccc4670e2fb40e.jpeg
-  facebook: koichi.tanaka.56
-  twitter: tanaka51
-  github: tanaka51-jp
-  description: 株式会社万葉 所属。Rails エンジニア。休日はプログラミングしいてるかアニメを見ているか麻雀をしているかお酒を飲んでいます。木更津高専 情報工学科 中退。
 -
   name: 桐山 裕平
   image: https://pbs.twimg.com/profile_images/573043864241512449/QpXlia5Z.png
@@ -113,18 +91,6 @@
   github: sue738
   description: 久留米工業高等専門学校 制御情報工学科卒。在学時代はずっとロボコンやってました。StartupWeekendという起業イベントで優勝したプロダクトで株式会社LOUPEを設立。主にRailsを書いてます。
 -
-  name: 奥本 隼
-  image: https://secure.gravatar.com/avatar/af5dcc1970148a511bf8a393f42dda96
-  facebook: falcon.8823
-  twitter: falcon_8823
-  github: falcon8823
-  web: http://blog.falconsrv.net/
-  description: |-
-    長野工業高等専門学校 電子情報工学科をこの春卒業し、
-    豊橋技術科学大学に編入。
-    2011年の高専カンファレンスin長野2で、受付システム「カンファイン」を開発する際にRailsと出会う。
-    昨年は、全国の高専生と遠隔で編入過去問解答共有サービス「Rocket Answer」を開発した。
--
   name: 泉 将之
   image: https://pbs.twimg.com/profile_images/414065206210220032/bJezBEvM.jpeg
   facebook: izumin5210
@@ -139,3 +105,9 @@
   twitter: beta_chelsea
   github: betachelsea
   description: 石川工業高等専門学校 電子情報工学科卒。高専カンファレンス情報系界隈の諸クラスタの影響を受け、Railsを始める。Rails寺子屋にて色々学んだ結果お仕事でも触るようになりました。株式会社LOUPE所属。 一番苦手なことは環境構築。
+-
+  name: 立花 豊
+  image: https://pbs.twimg.com/profile_images/2206703597/myprofile_bigger.jpg
+  twitter: saboyutaka
+  github: saboyutaka
+  description: KCS北九州情報専門学校、北海道情報大学をダブルスクールで卒業。新卒で入ったSIerで約1年半Javaをたしなむ。その後、ITカルチャーを見るために3ヶ月間渡米。帰国後スタッフで参加したRubyKaigi2013でpixivの中の人と知り合い入社。BOOTH.pmの開発で日々Railsと戯れる。最近はGrowth Hackに興味あり。
