--- a/data/masters/8.yml
+++ b/data/masters/8.yml
@@ -62,7 +62,7 @@
   description: 徳山工業高等専門学校 情報電子工学科卒業。株式会社spice lifeに所属。Rails2年生。Kuniaki.rb主催。WEB+DB PRESSのインタビューでつつみともよにネコミミをつけさせて各所から賞賛の言葉を浴びる。
 -
   name: 喜多 啓介
-  image: http://pbs.twimg.com/profile_images/436698798849421312/RthClfQJ.png
+  image: https://pbs.twimg.com/profile_images/633981353994772480/az9VSHoT.jpg
   facebook: kei.kita2501
   twitter: kitak
   github: kitak
@@ -100,7 +100,7 @@
   description: 明石高専 電気情報工学科及び同専攻科卒、Dmet labelとWantedlyで働くRuby大好きWeb系なんでもエンジニア。主にRailsを扱うがフロントエンドも得意、Androidも書く。うさみみ高専生。4月からうさみみ東大院生に進化する予定。
 -
   name: 柏 夏美
-  image: https://pbs.twimg.com/profile_images/532187945113886721/PHh_gKCp.png
+  image: https://pbs.twimg.com/profile_images/660483054104743936/4Bx_Ls5T.png
   facebook: natsumi.kashiwa
   twitter: beta_chelsea
   github: betachelsea
