--- a/data/masters/8.yml
+++ b/data/masters/8.yml
@@ -27,6 +27,14 @@
   web:
   description: 釧路高専 20期情報工学科卒業、ピクシブ株式会社のエンジニア。普段はAndroidのアプリケーション開発をしている。高専カンファレンスを始めとした楽しい催し物とクラブミュージックが好き。
 -
+  name: 三浦 彩
+  image: http://pbs.twimg.com/profile_images/328365018/3411179234_d31d01f498_b.jpg
+  facebook: takumi.miura.9
+  twitter: mitaku
+  github: mitaku
+  web:
+  description: 秋田高専卒業。ソーシャル系Railsエンジニア。高専カンファレンスなどの開催をしている。雨が嫌いで、怠け者。Rubyで素数を数えて落ち着く。
+-
   name: そらは
   image: http://pbs.twimg.com/profile_images/378800000551066529/d4a92c61fdb0ee77fb6d29ed644581b7.png
   facebook:
@@ -75,13 +83,6 @@
   github: kirikiriyamama
   web: http://kirikiriyamama.hatenablog.com/
   description: 長野工業高等専門学校 電子情報工学科卒。2013年 Rails寺子屋に参加、Railsと出会う。2014年 Rails寺子屋を通じて出会った株式会社spice lifeに転職、Railsエンジニアになる。同年 Rails寺子屋の師範になる。
--
-  name: 末永 昌也
-  image: https://pbs.twimg.com/profile_images/494174637031321600/P58XiMrF.png
-  facebook: masaya.suenaga
-  twitter: sue738
-  github: sue738
-  description: 久留米工業高等専門学校 制御情報工学科卒。在学時代はずっとロボコンやってました。StartupWeekendという起業イベントで優勝したプロダクトで株式会社LOUPEを設立。主にRailsを書いてます。
 -
   name: 泉 将之
   image: https://pbs.twimg.com/profile_images/414065206210220032/bJezBEvM.jpeg
